--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^8.0.0",
+    "postcss": "^8.4.21",
+    "sass-loader": "^13.2.2",
+    "tailwindcss": "^3.2.7"
   }
 }
