--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "flowbite": "^1.6.4",
     "vue": "^3.2.13",
+    "vue-flatpickr-component": "^11.0.3",
     "vue-router": "^4.0.3",
+    "vue3-datepicker": "^0.3.4",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
