--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "flowbite": "^1.6.4",
+    "flowbite-datepicker": "^1.2.2",
     "vue": "^3.2.13",
     "vue-flatpickr-component": "^11.0.3",
     "vue-router": "^4.0.3",
