--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@capacitor/cli": "^4.7.1",
     "@capacitor/core": "^4.7.1",
     "@capacitor/ios": "^4.7.1",
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "flowbite": "^1.6.4",
     "flowbite-datepicker": "^1.2.2",
@@ -22,7 +23,8 @@
     "vue-router": "^4.0.3",
     "vue3-datepicker": "^0.3.4",
     "vue3-qrcode-reader": "0.0.1",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
